WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284104
[line-clamp] Number of contentful lines does not always match the number of lines with inline content
https://bugs.webkit.org/show_bug.cgi?id=284104
Summary
[line-clamp] Number of contentful lines does not always match the number of l...
alan
Reported
2024-12-05 05:23:57 PST
.e.g <br><span></span>
Attachments
Patch
(16.04 KB, patch)
2024-12-05 05:39 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(19.25 KB, patch)
2024-12-05 06:17 PST
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(19.28 KB, patch)
2024-12-05 09:10 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(19.71 KB, patch)
2024-12-05 10:15 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(19.71 KB, patch)
2024-12-05 12:02 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-12-05 05:39:03 PST
Created
attachment 473467
[details]
Patch
alan
Comment 2
2024-12-05 06:17:03 PST
Created
attachment 473468
[details]
Patch
alan
Comment 3
2024-12-05 09:10:07 PST
Created
attachment 473469
[details]
Patch
alan
Comment 4
2024-12-05 10:15:47 PST
Created
attachment 473470
[details]
[fast-cq]Patch
alan
Comment 5
2024-12-05 12:02:16 PST
Created
attachment 473471
[details]
[fast-cq]Patch
EWS
Comment 6
2024-12-05 16:05:24 PST
Committed
287416@main
(33bd862c8092): <
https://commits.webkit.org/287416@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473471
[details]
.
Radar WebKit Bug Importer
Comment 7
2024-12-05 16:06:12 PST
<
rdar://problem/141012519
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug