[line-clamp] Number of contentful lines does not always match the number of lines with inline content https://bugs.webkit.org/show_bug.cgi?id=284104

Reviewed by Antti Koivisto.

Let's track the number of _contentful_ lines for line clamping.

In some cases (trailing out-of-flow boxes or non-contentful inline content after the final <br>) we end up creating
a display line with no display box other than the root inline display box. Such "empty" lines should not be
taken into account when counting the lines for line-clamp.

examples:
<div>this line is contentful<br><div style="position: absolute"></div> <- out of flow box after last contentful line
<div>this line is contenful<br><span></span></div> <- non-contentful trailing inline content

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::lineLayout):
(WebCore::Layout::InlineFormattingContext::createDisplayContentForInlineContent):
(WebCore::Layout::InlineFormattingContext::createDisplayContentForLineFromCachedContent):
(WebCore::Layout::InlineFormattingContext::createDisplayContentForEmptyInlineContent):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.h:
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp:
(WebCore::Layout::InlineFormattingUtils::lineEndingTruncationPolicy):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.h:
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLineBuilder.cpp:
(WebCore::Layout::moveDisplayBoxToClampedLine):
* Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContentBuilder.cpp:
(WebCore::LayoutIntegration::InlineContentBuilder::adjustDisplayLines const):

Canonical link: https://commits.webkit.org/287416@main